mypod.yml
apiVersion: v1
kind: Pod
metadata:
      name: "new-pod1"

spec:
      containers:
      -  name:  "new-con1"
         image:  "centos:6"
         stdin: True
         tty: True
