selectors.yml
apiVersion: v1
kind: Pod
metadata:
     name: "my-new-pod1"
     labels:
          height: medium
          eta: medium
          route: low

spec:
     containers:
     - name: "cen6-con"
       image: "centos:6"
       stdin: True
       tty: True
