lb.yml
apiVersion: v1
kind: Service
metadata:
     name: lb1
spec:
      type: NodePort
      selector:
            app: web-1
      ports:
            - targetPort: 80
              port: 8080
              nodePort: 31090
